tests/errors/printfn_no_format_err/printfn_no_format_err.c
#error printfn_no_format_err:7:3 Illegal use of printfn. printfn must have string literal as first argument; e.g. `printfn "%s" s`.
